--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,58 +1,62 @@
 name: CI/CD Pipeline
+
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+
 jobs:
-  build-and-push:
-    runs-on: self-hosted
+  build-and-deploy:
+    runs-on: self-hosted  # Or use: ubuntu-latest (if not using self-hosted runner)
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.CR_PAT }}
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
+      - name: Set lowercase repo name
+        id: repo
+        run: echo "value=${GITHUB_REPOSITORY,,}" >> $GITHUB_OUTPUT
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/kubernetes-cicd-tutorial:latest
-            ghcr.io/${{ github.repository_owner }}/kubernetes-cicd-tutorial:${{ github.sha }}
+            ghcr.io/${{ steps.repo.outputs.value }}:latest
+            ghcr.io/${{ steps.repo.outputs.value }}:${{ github.sha }}
+
       - name: Update GitOps repository
         shell: bash
         env:
           GIT_TOKEN: ${{ secrets.GITOPS_PAT }}
         run: |
-          # Configure git credential store
+          # Configure Git credentials
           git config --global credential.helper store
           echo "https://${GIT_TOKEN}:x-oauth-basic@github.com" > ~/.git-credentials
-          
-          # Remove any existing gitops directory
+
+          # Clone GitOps repo
           rm -rf gitops
-          
-          # Clone repository using HTTPS URL without token
           git clone https://github.com/abhishekkkk-15/grade-api-gitops.git gitops
           cd gitops
-          
-          if [[ "$OSTYPE" == "darwin"* ]]; then
-            sed -i '' "s|image: ghcr.io/${{ github.repository }}:.*|image: ghcr.io/${{ github.repository }}:${{ github.sha }}|g" deployment.yaml
-          else
-            sed -i "s|image: ghcr.io/${{ github.repository }}:.*|image: ghcr.io/${{ github.repository }}:${{ github.sha }}|g" deployment.yaml
-          fi
-          
-          # Commit changes
+
+          # Replace image tag in deployment.yaml
+          sed -i "s|image: ghcr.io/.*|image: ghcr.io/${{ steps.repo.outputs.value }}:${{ github.sha }}|g" deployment.yaml
+
+          # Commit and push changes
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add deployment.yaml
           git commit -m "Update image to ${{ github.sha }}"
-          
-          # Push
           git push -f https://${GIT_TOKEN}@github.com/abhishekkkk-15/grade-api-gitops.git main
