--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Set lowercase repo name
         id: repo
-        run: echo "value=${GITHUB_REPOSITORY,,}" >> $GITHUB_OUTPUT
+        run: echo "value=${GITHUB_REPOSITORY,,}" >> "$GITHUB_OUTPUT"
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
