--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: self-hosted  # Or use: ubuntu-latest (if not using self-hosted runner)
+    runs-on: self-hosted  # Or use: ubuntu-latest if not using self-hosted
 
     steps:
       - name: Checkout code
@@ -26,7 +26,11 @@ jobs:
 
       - name: Set lowercase repo name
         id: repo
-        run: echo "value=${GITHUB_REPOSITORY,,}" >> "$GITHUB_OUTPUT"
+        run: |
+          echo "value=$(echo "${GITHUB_REPOSITORY}" | tr '[:upper:]' '[:lower:]')" >> "$GITHUB_OUTPUT"
+
+      - name: Debug tag
+        run: echo "Docker tag will be: ghcr.io/${{ steps.repo.outputs.value }}:latest"
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
@@ -42,19 +46,15 @@ jobs:
         env:
           GIT_TOKEN: ${{ secrets.GITOPS_PAT }}
         run: |
-          # Configure Git credentials
           git config --global credential.helper store
           echo "https://${GIT_TOKEN}:x-oauth-basic@github.com" > ~/.git-credentials
 
-          # Clone GitOps repo
           rm -rf gitops
           git clone https://github.com/abhishekkkk-15/grade-api-gitops.git gitops
           cd gitops
 
-          # Replace image tag in deployment.yaml
           sed -i "s|image: ghcr.io/.*|image: ghcr.io/${{ steps.repo.outputs.value }}:${{ github.sha }}|g" deployment.yaml
 
-          # Commit and push changes
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add deployment.yaml
