--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,7 +33,7 @@ jobs:
             ghcr.io/abhishekkkk-15/kubernetes-cicd-tutorial:latest
             ghcr.io/abhishekkkk-15/kubernetes-cicd-tutorial:${{ github.sha }}
       - name: Update GitOps repository
-        shell: pwsh
+        shell: powershell
         env:
           GIT_TOKEN: ${{ secrets.GITOPS_PAT }}
         run: |
@@ -44,10 +44,13 @@ jobs:
           git clone https://github.com/abhishekkkk-15/grade-api-gitops.git gitops
           Set-Location gitops
 
-          (Get-Content deployment.yaml) -replace 'image: ghcr.io/.*', 'image: ghcr.io/${{ steps.repo.outputs.value }}:${{ github.sha }}' | Set-Content deployment.yaml
+          $file = Get-Content deployment.yaml
+          $updated = $file -replace 'image: ghcr.io/.*', 'image: ghcr.io/${{ steps.repo.outputs.value }}:${{ github.sha }}'
+          $updated | Set-Content deployment.yaml
 
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add deployment.yaml
           git commit -m "Update image to ${{ github.sha }}"
           git push -f https://${env:GIT_TOKEN}@github.com/abhishekkkk-15/grade-api-gitops.git main
+
